# parquet_to_sqlite_sample

./: .gitignore  README.md  alembic.ini  cli.py  dl.txt  model.py  profile_course-0.parquet  profile_honour_award-0.parquet  profile_language-0.parquet  profile_organization-0.parquet  profile_patent-0.parquet  profile_project-0.parquet  profile_publication-0.parquet  profile_test_score-0.parquet  profile_volunteering_experience-0.parquet  pyproject.toml
alembic/: env.py
alembic/versions/: 71da29053525_create_init_tables.py  fbdba4d9cfec_create_extra_tables.py
